wip: pre implementation of atlas
